fix horizontal scroll at <767, and adjustment tuning

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -115,6 +115,7 @@ body.signup {
 
 .section-nav.lift-counter {
     padding-bottom: 90px;
+    overflow: hidden;
 }
 .section-nav > .navbar:last-child {
     margin-bottom: 20px;
@@ -125,8 +126,7 @@ body.signup {
     padding-bottom: 20px;
   }
   .section-nav.lift-counter {
-    padding-bottom: 15px;
-    margin-bottom: -25px;
+    padding-bottom: 0;
   }
 }
 .simple .section-nav { padding-bottom: 0; }
@@ -302,9 +302,6 @@ body.signup {
 
   > .highlight {
     text-align: center;
-    white-space: nowrap;
-
-    padding-right: 5px;
 
     background-color: $takeActionHighlightBackground;
   }
@@ -332,7 +329,7 @@ body.signup {
       background-color: darken($takeActionHighlightBackground, 5%);
     }
     > .highlight-arrow {
-      background-position: 5px center;
+      background-position: 4px center;
     }
   }
 }
@@ -1112,7 +1109,7 @@ body.simple {
   }
 }
 @media (max-width: 980px) {
- .overview {
+ body.overview .column-content {
     img {
      float: none !important;
      width: 90% !important;
@@ -1121,5 +1118,9 @@ body.simple {
     }
   }
 }
-
+@media (max-width: 480px) {
+	.overview #intro img {
+		margin: 0;
+	}
+}
 
