--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -1,5 +1,4 @@
 
-
 /* This is site specific branding */
 .navbar {
   position: relative;
@@ -109,16 +108,16 @@
   background-color: #070707;
   background-image: none;
   //@include gradient-vertical($startColor: #282828, $endColor: #121212);
-  background-repeat: repeat-x;
   display: none;
   font-size: 13px;
   font-weight:normal;
-  margin: 0 20px 0;
+  margin: 0 0 0 -20px;
   padding: 8px 20px;
   border:0;
   color: #aaa;
   overflow: hidden;
   text-align:left;
+  width: 100%;
   text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.25);
   
   &:hover {
@@ -147,9 +146,6 @@
 	.column-navbar {
 		background: #000;
 		display:block;
-		overflow: hidden;
-		margin: 0 -40px;
-		min-height: 32px;
 		> h3 {
 			float:left;
 			color: #fff;
@@ -196,6 +192,7 @@
   	  background: url('../images/OSlogo57.png') center top no-repeat transparent;
   	  height: 60px;
   	  margin-bottom: 5px;
+  	  margin-top: 5px;
   	}
   }
 }
@@ -231,9 +228,6 @@
 			min-height: 90px;
 		}
     .brand {
-      .brand-image {
-        margin-bottom: 5px;
-      }
       > a:hover > .brand-image {
         -moz-transform: rotate(0);
         -webkit-transform: rotate(0);
@@ -242,7 +236,7 @@
     }
     .nav > li > a {
       font-weight: normal;
-      font-size: 13px;
+      font-size: 12px;
       //padding: 5px 0;
     }
   }
